# agentos

./: .env.example  .gitignore  .gitleaksignore  AGENTS.md  ARCHITECTURE.md  AgentOS.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  QUICKSTART.md  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  compose.dev.yaml  compose.release.yaml  get-agentos.sh  get-curie.sh  install.sh  llms.txt  pyproject.toml
apps/api/: CLAUDE.md  Dockerfile  README.md  alembic.ini  openapi.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/docs/: eval-fanout.md
apps/api/tests/: conftest.py  test_agent_model_integration.py  test_agents.py  test_approval_decision_hoist.py  test_approvals.py  test_approvers_port.py  test_auth.py  test_authorizer.py  test_behavior_packs_integration.py  test_behavior_packs_size_cap.py  test_bundle_ingestion_bounds.py  test_bundles.py  test_config.py  test_config_parity.py  test_config_prod_gate.py  test_console_session.py  test_control_integration.py  test_control_unit.py  test_crud.py  test_eval_case_schema_parity.py  test_evalqueue_integration.py  test_evals_integration.py  test_evals_report.py  test_evals_trigger_integration.py  test_evals_unit.py  test_gitflow_integration.py  test_gitflow_unit.py  test_github_checks.py  test_graveyard_watcher.py  test_integrity_mapping.py  test_langfuse_integration.py  test_langfuse_paging.py  test_langfuse_tree.py  test_managed_pg_swap.py  test_memory.py  test_metrics_integration.py  test_metrics_unit.py  test_migrations.py  test_openapi_drift.py  test_promote_eval_case.py  (+12 more)
apps/dispatcher/: CLAUDE.md  Dockerfile  README.md  pyproject.toml  slack-app-manifest.yaml
apps/dispatcher/tests/: conftest.py  test_approval_actions.py  test_broker_port.py  test_config.py  test_dispatch.py  test_heartbeat.py  test_preflight.py  test_queue.py  test_smoke.py  test_supervisor.py
apps/worker/: CLAUDE.md  Dockerfile  Dockerfile.dockerignore  README.md  pyproject.toml
apps/worker/schema/: eval-cases.example.json  eval-cases.schema.json
apps/worker/tests/: test_approval_resumer.py  test_behaviorpacks.py  test_behaviorpacks_parity.py  test_blocks.py  test_broker_port.py  test_bundle_store.py  test_config.py  test_heartbeat.py  test_mrkdwn.py  test_run.py  test_slack_sink.py  test_smoke.py  test_stream_consumer.py
cli/: CLAUDE.md  Cargo.toml  README.md  api-mirrors.json  build.rs  command-manifest.json  plugin-format-mirrors.json
cli/schema/: approvals.schema.json  budget.schema.json  bump-version.schema.json  check.schema.json  cluster-down.schema.json  cluster-status.schema.json  cluster-up.schema.json  comms.schema.json  delete.schema.json  deploy.schema.json  dry-run.schema.json  error.schema.json  eval.schema.json  guide.schema.json  index.json  init.schema.json  kill.schema.json  list-agents.schema.json  local-down.schema.json  local-rebuild.schema.json  local-status.schema.json  local-up.schema.json  memory.schema.json  message.schema.json  observability.schema.json  reset-thread.schema.json  resume.schema.json  secrets.schema.json  skill-approvals.schema.json  skill-message.schema.json  status.schema.json  sweep.schema.json  versions.schema.json
cli/scripts/: check-emit-parity.sh  check-field-parity.sh  e2e-ladder.sh  e2e.sh  eval-falsifiability.sh  harness-eval.sh
cli/src/: api.rs  artifacts.rs  bundle.rs  channel.rs  chat.rs  commands.rs  comms.rs  discover.rs  docker.rs  eval_init.rs  evals.rs  exit.rs  guide.rs  interactive.rs  lib.rs  local.rs  main.rs  message.rs  ndjson.rs  observability.rs  ops.rs  queue.rs  recipes.rs  render.rs  retired.rs  runner.rs  scaffold.rs  schema.rs  schemas.rs  secrets.rs  slack.rs  slack_sim.rs  spec.rs  state.rs  ui.rs
cli/tests/: api_deploy.rs  api_emit_parity.rs  api_field_parity.rs  api_lifecycle.rs  approvals_list_truncation.rs  approvals_manifest_unreadable.rs  approvals_resolve_actor_channel.rs  artifacts_fetch.rs  boot_env_contract.rs  chat_enqueue.rs  cluster_down_failforward.rs  command_surface.rs  credential_resolution.rs  deploy_transport.rs  eval_concurrency.rs  eval_falsifiability.rs  exit_codes.rs  fake_tier_plumbing.rs  guide.rs  json_contract.rs  json_emit_contract.rs  nightly_graded_ladder.rs  non_interactive.rs  plugin_format_field_parity.rs  resume_wait.rs  runner_control.rs  runner_stream.rs  schema_inventory.rs  skill_check.rs  skill_up_replace.rs  slack_sim_enqueue.rs  spec_scaffold.rs  tui_parity.rs
cli/tests/data/: eval_falsifiability_fixtures.json
cli/tests/support/: emit_parity.rs  field_parity.rs  mod.rs  schema_inventory.rs
harness-eval/: README.md  pyproject.toml
harness-eval/src/harness_eval/: __init__.py  __main__.py  driver.py  harness.py  models.py  primer.py  report.py  scoring.py  tasks.py
harness-eval/tests/: conftest.py  test_harness.py  test_main.py  test_models.py  test_primer.py  test_report.py  test_scoring.py  test_tasks.py
runner/: CLAUDE.md  Dockerfile  Dockerfile.opencode  README.md  pyproject.toml
runner/schema/: otel-attributes.schema.json
runner/src/agentos_runner/: INTERFACE.md  __init__.py  __main__.py  adapter.py  approval.py  budget.py  cache.py  check.py  config.py  conformance.py  events.py  fake.py  history.py  hooks.py  memory.py  otel.py  plugin.py  redact.py  sdk_auth.py  server.py  session.py  side_effects.py  (+2 more)
runner/tests/: test_adapter.py  test_approval.py  test_budget.py  test_check.py  test_config.py  test_config_boot_env.py  test_conformance.py  test_false_completion.py  test_gate_e2e.py  test_harness_boot_wiring.py  test_harness_contribution.py  test_harness_registry.py  test_history.py  test_hooks.py  test_live.py  test_memory.py  test_opencode_auth.py  test_opencode_installer.py  test_opencode_main.py  test_opencode_session.py  test_opencode_synth.py  test_otel.py  test_otel_schema_drift.py  test_plugin.py  test_prompt_cache.py  test_redact.py  test_sdk_auth.py  test_sdk_auth_classify.py  test_server.py  test_session.py  test_side_effects.py  test_smoke.py  test_state.py  test_translate.py
tools/doclint/: pyproject.toml
tools/wire-tolerance-gate/: allowlist.json  pyproject.toml
(+770 files in other folders)
