[project]
name = "agentos-workspace"
version = "0.0.0"
description = "Relay (AgentOS) monorepo workspace root"
requires-python = ">=3.13"
dependencies = [
    "aci-protocol",
    "agentos-channel-protocol",
    "plugin-format",
    "agentos-api",
    "agentos-dispatcher",
    "agentos-worker",
    "agentos-runner",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/aci-protocol",
    "packages/channel-protocol",
    "packages/plugin-format",
    "packages/test-support",
    "apps/api",
    "apps/dispatcher",
    "apps/worker",
    "runner",
    "tools/doclint",
    "tools/wire-tolerance-gate",
]

[tool.uv.sources]
aci-protocol = { workspace = true }
agentos-channel-protocol = { workspace = true }
plugin-format = { workspace = true }
agentos-test-support = { workspace = true }
agentos-api = { workspace = true }
agentos-dispatcher = { workspace = true }
agentos-worker = { workspace = true }
agentos-runner = { workspace = true }
agentos-doclint = { workspace = true }
agentos-wire-tolerance-gate = { workspace = true }

[dependency-groups]
dev = [
    "agentos-doclint",
    "agentos-wire-tolerance-gate",
    "agentos-test-support",
    "pytest>=8.3",
    "ruff>=0.15.22",
    "mypy>=2.3.0",
    "types-PyYAML>=6.0",
    "opentelemetry-sdk>=1.44.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = [
    "packages/aci-protocol/tests",
    "packages/channel-protocol/tests",
    "packages/plugin-format/tests",
    "apps/api/tests",
    "apps/dispatcher/tests",
    "apps/worker/tests",
    "runner/tests",
    "compose/tests",
    "release/tests",
    "examples/tests",
    "tools/doclint/tests",
    "tools/wire-tolerance-gate/tests",
    # Only the offline harness unit tests -- NOT the whole tree: the cluster
    # scenario in test_soak_resilience.py stays out of default collection and
    # runs only under AGENTOS_SOAK=1 (#499).
    "tests/soak/test_harness_unit.py",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["prototypes"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The committed doclint test suite is frozen (issue #452) and groups its imports
# with an extra blank line before the first section comment, which ruff's isort
# would collapse. The implementation under tools/doclint/src stays fully linted,
# I001 included; only the frozen tests are exempt from import-block formatting.
"tools/doclint/tests/**" = ["I001"]

[tool.mypy]
python_version = "3.13"
strict = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    "packages/aci-protocol/src",
    "packages/channel-protocol/src",
    "packages/plugin-format/src",
    "packages/test-support/src",
    "apps/api/src",
    "apps/dispatcher/src",
    "apps/worker/src",
    "runner/src",
    "tools/doclint/src",
    "tools/wire-tolerance-gate/src",
]
files = [
    "packages/aci-protocol/src",
    "packages/channel-protocol/src",
    "packages/plugin-format/src",
    "packages/test-support/src",
    "apps/api/src",
    "apps/dispatcher/src",
    "apps/worker/src",
    "runner/src",
    "tools/doclint/src",
    "tools/wire-tolerance-gate/src",
]

# The official kubernetes client ships no type stubs; keep its boundary typed
# on our side (apps/worker/src/agentos_worker/sandbox/k8s.py) instead.
[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true
