[package]
name = "agentos"
version = "0.2.0"
edition = "2021"
description = "AgentOS CLI: init/start/send/eval a plugin against a local runner (task I1)"

[[bin]]
name = "agentos"
path = "src/main.rs"

[dependencies]
agentos-aci-protocol = { path = "../packages/aci-protocol/generated/rust" }
anstream = "1"
anstyle = "1"
anstyle-query = "1"
anyhow = "1"
axum = { version = "0.8", default-features = false, features = [
    "tokio",
    "http1",
    "json",
] }
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "multipart",
    "rustls-tls",
] }
redis = { version = "0.27", default-features = false, features = [
    "tokio-comp",
    "streams",
] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
tar = "0.4"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["v4"] }
# OS CSPRNG for generating strong per-release chart secrets (cluster up). Same
# 0.2 line uuid already pulls in; the free `getrandom::getrandom` fill API.
getrandom = "0.2"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "time",
    "fs",
    "io-util",
    "net",
    "sync",
] }

[dev-dependencies]
tempfile = "3"
