[package]
name = "agentos"
version = "0.4.0"
edition = "2021"
description = "AgentOS CLI: init/start/send/eval a plugin against a local runner (task I1)"

[[bin]]
name = "agentos"
path = "src/main.rs"

[dependencies]
agentos-aci-protocol = { path = "../packages/aci-protocol/generated/rust" }
anstream = "1"
anstyle = "1"
anstyle-query = "1"
anyhow = "1"
axum = { version = "0.8", default-features = false, features = [
    "tokio",
    "http1",
    "json",
] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.29"
# Reads `.env` files (repo-root + bundle-local) into the process env so
# `skill up` config lives in files the CLI owns rather than ambient shell
# exports. Non-overriding load: a real shell export always wins over a file.
dotenvy = "0.15"
flate2 = "1"
futures-util = "0.3"
indicatif = "0.18"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "multipart",
    "rustls-tls",
] }
redis = { version = "1.3", default-features = false, features = [
    "tokio-comp",
    "streams",
] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29"] }
unicode-width = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
tar = "0.4"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["v4"] }
# OS CSPRNG for generating strong per-release chart secrets (cluster up). Same
# 0.2 line uuid already pulls in; the free `getrandom::getrandom` fill API.
getrandom = "0.4"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "time",
    "fs",
    "io-util",
    "net",
    "sync",
] }
keyring = "4.1.5"
rpassword = "7.5.4"

[dev-dependencies]
tempfile = "3"
# JSON Schema validation for the agent-facing --json contract gate (ADR-0021).
# Default features pull reqwest + a second TLS stack for remote $ref resolution
# we never use; the committed schemas are self-contained, so keep it lean.
jsonschema = { version = "0.48", default-features = false }
# The frozen ACI types are a normal dependency of the lib, but integration test
# crates need them by name to build a SessionStatus for the status_json contract.
agentos-aci-protocol = { path = "../packages/aci-protocol/generated/rust" }
# AST parse of cli/src/api.rs for the --json field-parity gate (#691): resolve
# serde rename/skip/flatten and derive spellings exactly. `full` parses fn
# bodies, `visit` recurses into fn/impl-body items (the method-local BundleFiles),
# `extra-traits` gives the PartialEq the walk relies on.
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
