[project]
name = "harness-eval"
version = "0.0.0"
description = "AgentOS primer before-after harness: measures coding-agent task success with vs without the agentos guide primer"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_eval"]
