[project]
name = "curie-runner"
version = "0.0.0"
description = "Curie runner: claude-agent-sdk streaming session server implementing the ACI v0.1 contract"
requires-python = ">=3.13"
dependencies = [
    "aci-protocol",
    "plugin-format",
    "claude-agent-sdk>=0.2.126",
    "aiohttp>=3.14.3",
    "opentelemetry-sdk>=1.44.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30",
    "anyio>=4.6",
]

[project.entry-points."curie.harness"]
claude = "curie_runner.harness.claude:get_contribution"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curie_runner"]
