[project]
name = "agentos-api"
version = "0.0.0"
description = "AgentOS API server (FastAPI): agents/versions/deployments CRUD, auth, Langfuse proxy"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentos_api"]
