[project]
name = "agentos-api"
version = "0.0.0"
description = "AgentOS API server (FastAPI): agents/versions/deployments CRUD, auth, Langfuse proxy"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "boto3>=1.35",
    "boto3-stubs[s3]>=1.43.45",
    "python-multipart>=0.0.18",
    "kubernetes>=31",
    "redis>=5.0",
    "plugin-format",
    "aci-protocol",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentos_api"]
