[project]
name = "agentos-dispatcher"
version = "0.0.0"
description = "AgentOS dispatcher (Slack Bolt for Python, Socket Mode): ack + enqueue to Valkey Streams"
requires-python = ">=3.13"
dependencies = [
    "aci-protocol",
    "slack-bolt>=1.21",
    "redis>=5.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentos_dispatcher"]
