[project]
name = "agentos-worker"
version = "0.0.0"
description = "AgentOS worker: concurrency kernel (routing, finish-race CAS, steer/interrupt), sandbox substrate, eval runner"
requires-python = ">=3.13"
dependencies = [
    "redis>=5.2",
    "kubernetes>=31.0",
    "aci-protocol",
    "agentos-dispatcher",
    "aiohttp>=3.11",
    "slack-sdk>=3.43",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentos_worker"]
