[project]
name = "agentos-worker"
version = "0.0.0"
description = "AgentOS worker: concurrency kernel (routing, finish-race CAS, steer/interrupt), sandbox substrate, eval runner"
requires-python = ">=3.13"
dependencies = [
    "redis>=5.2",
    "pydantic-settings>=2.7",
    "kubernetes>=31.0",
    "aci-protocol",
    "agentos-channel-protocol",
    "plugin-format",
    "agentos-dispatcher",
    "aiohttp>=3.11",
    "slack-sdk>=3.43",
    "httpx>=0.28",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.30",
    "boto3>=1.43.55",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentos_worker"]
