[project]
name = "agentos-doclint"
version = "0.0.0"
description = "The interface-catalog citation linter and index/header generator (issue #452)"
requires-python = ">=3.13"
dependencies = [
    "markdown-it-py>=3.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentos_doclint"]
