[project]
name = "curie-wire-tolerance-gate"
version = "0.0.0"
description = "Static gate (#625): every model_validate*/model_validate_json call on an _AciModel subclass must thread READER_CONTEXT or be declared in the allowlist"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curie_wire_tolerance_gate"]
